[gd_scene load_steps=5 format=3 uid="uid://310lu1lh3i0i"]

[ext_resource type="Script" path="res://Scene/difficulty_select.gd" id="1_wnfut"]
[ext_resource type="LabelSettings" uid="uid://d1aedhks83pga" path="res://ui_resource.tres" id="2_16qvn"]
[ext_resource type="Theme" uid="uid://y5hchr7wrhs" path="res://ui_theme.tres" id="3_86fv8"]
[ext_resource type="Texture2D" uid="uid://dhn54wve3gknv" path="res://Screenshot 2024-04-22 125909.png" id="3_no0kj"]

[node name="Difficulty Select" type="Control"]
layout_mode = 3
anchor_left = 0.007
anchor_right = 1.007
anchor_bottom = 1.0
offset_left = -8.064
offset_right = -8.06409
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_wnfut")

[node name="CanvasLayer" type="CanvasLayer" parent="."]
visible = false

[node name="Label" type="Label" parent="CanvasLayer"]
offset_left = 463.0
offset_top = 72.0
offset_right = 1143.0
offset_bottom = 321.0
text = "HOW TO PLAY:
- Use W and S (or UP and DOWN Arrows) 
to move from lane to lane
- Press SPACEBAR when the green bubbles 
overlap the circle hitbox to gain score
- Stay to the beat!"
label_settings = ExtResource("2_16qvn")

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer"]
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 17.0
offset_top = -299.0
offset_right = 545.0
offset_bottom = 129.0
grow_vertical = 2
scale = Vector2(0.8, 0.747908)

[node name="Label" type="Label" parent="CanvasLayer/VBoxContainer"]
layout_mode = 2
theme = ExtResource("3_86fv8")
text = "Select Difficulty
"
horizontal_alignment = 1

[node name="Easy" type="Button" parent="CanvasLayer/VBoxContainer"]
layout_mode = 2
theme = ExtResource("3_86fv8")
text = "Easy"

[node name="Medium" type="Button" parent="CanvasLayer/VBoxContainer"]
layout_mode = 2
theme = ExtResource("3_86fv8")
text = "Medium"

[node name="Hard" type="Button" parent="CanvasLayer/VBoxContainer"]
layout_mode = 2
theme = ExtResource("3_86fv8")
text = "Hard
"

[node name="Back" type="Button" parent="CanvasLayer/VBoxContainer"]
layout_mode = 2
theme = ExtResource("3_86fv8")
text = "Back"

[node name="Screenshot2024-04-22125909" type="Sprite2D" parent="CanvasLayer"]
position = Vector2(778.125, 501.625)
scale = Vector2(0.634834, 0.618634)
texture = ExtResource("3_no0kj")

[connection signal="pressed" from="CanvasLayer/VBoxContainer/Easy" to="." method="_on_easy_pressed"]
[connection signal="pressed" from="CanvasLayer/VBoxContainer/Medium" to="." method="_on_medium_pressed"]
[connection signal="pressed" from="CanvasLayer/VBoxContainer/Hard" to="." method="_on_hard_pressed"]
[connection signal="pressed" from="CanvasLayer/VBoxContainer/Back" to="." method="_on_back_pressed"]
